# WoSt_Final_project

./: CMakeLists.txt  README.md  WoSt.py  WoStGeometryBackend.cpp  WoStGeometryBackend.hpp  WoStKernel.cpp  WoStKernel.hpp  main.cpp  run.sh  utils.hpp  wost_laplace.vtk  wost_mixed.vtk  wost_poisson.vtk
